--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "https://www.udemy.com/course/webpack-crash-course/",
   "main": "index.js",
   "scripts": {
+    "launch": "webpack-dev-server --open --mode production",
     "start": "webpack-dev-server --open --mode development"
   },
   "repository": {
@@ -28,9 +29,10 @@
     "html-webpack-plugin": "^3.2.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
